[gd_scene load_steps=4 format=3 uid="uid://dg77eedgndpjy"]

[ext_resource type="Script" uid="uid://cnunke2eajoa" path="res://wake_up_screen.gd" id="1_1k6op"]
[ext_resource type="Texture2D" uid="uid://8avjadaexdib" path="res://sunrisebg.png" id="2_shn6v"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gn345"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_shn6v")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="WakeUpScreen" type="Node2D"]
script = ExtResource("1_1k6op")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 80.0
offset_top = 68.0
offset_right = 325.0
offset_bottom = 124.0
theme_override_font_sizes/normal_font_size = 32
text = "Good Morning,"
metadata/_edit_use_anchors_ = true

[node name="NameLabel" type="RichTextLabel" parent="."]
offset_left = 26.0
offset_top = 119.0
offset_right = 377.0
offset_bottom = 196.0
theme_override_font_sizes/normal_font_size = 40
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CurrentTimeLabel" type="RichTextLabel" parent="."]
offset_left = 37.0
offset_top = 12.0
offset_right = 381.0
offset_bottom = 64.0
theme_override_font_sizes/normal_font_size = 30
text = "Current Time: "
metadata/_edit_use_anchors_ = true

[node name="HowAreYouFeeling" type="RichTextLabel" parent="."]
offset_left = 29.0
offset_top = 204.0
offset_right = 385.0
offset_bottom = 331.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "How Are You Feeling on this Beautiful Monday Morning?"
metadata/_edit_use_anchors_ = true

[node name="InitialSlider" type="HSlider" parent="."]
offset_left = 16.0
offset_top = 339.0
offset_right = 375.0
offset_bottom = 412.0
max_value = 1.0
step = 0.05
value = 0.5

[node name="Button" type="Button" parent="."]
offset_left = 91.0
offset_top = 466.0
offset_right = 288.0
offset_bottom = 522.0
theme_override_font_sizes/font_size = 25
text = "Submit"

[node name="FeelingComment" type="RichTextLabel" parent="."]
offset_left = 81.0
offset_top = 402.0
offset_right = 312.0
offset_bottom = 451.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 25
text = "Neutral"
horizontal_alignment = 1

[node name="SettingsButton" type="Button" parent="."]
offset_left = 103.0
offset_top = 530.0
offset_right = 281.0
offset_bottom = 581.0
theme_override_font_sizes/font_size = 25
text = "Settings"

[node name="SunriseBG" type="AnimatedSprite2D" parent="."]
z_index = -100
position = Vector2(198, 301.5)
scale = Vector2(0.897959, 0.968701)
sprite_frames = SubResource("SpriteFrames_gn345")

[connection signal="value_changed" from="InitialSlider" to="." method="_on_initial_slider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
